Fixing github dependencies

--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "jiggler": "0.0.9",
     "jsonschema": "0.4.0",
     "lodash": "^3.10.0",
-    "mixpanel": "git+ssh://git@github.com:mixpanel/mixpanel-node.git#master",
+    "mixpanel": "https://github.com:mixpanel/mixpanel-node.git#master",
     "mkdirp": "^0.3.5",
     "moment": "~2.6.0",
     "moment-timezone": "0.2.4",
@@ -139,7 +139,7 @@
     "phantomjs": "^1.9.10",
     "qs": "^2.3.1",
     "request": "^2.57.0",
-    "require-all": "git+ssh://git@github.com:ryanpon/node-require-all.git#master",
+    "require-all": "https://github.com:ryanpon/node-require-all.git#master",
     "require-directory": "^2.0.0",
     "restify": "~3.0.1",
     "rimraf": "^2.2.6",
